--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-759.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 未知国家-3.98MB/s(Youtube:不良林), server: node.free.usa.naiun.pw, port: 80, type: vmess, uuid: 66919abe-f694-42d8-b35f-af0dc61f68e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: node.free.usa.naiun.pw}}
-  - {name: 🇸🇬 新加坡-795.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 45.88.148.234, port: 38443, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 未知国家-3.98MB/s(Youtube:不良林), server: node.free.usa.naiun.pw, port: 80, type: vmess, uuid: 66919abe-f694-42d8-b35f-af0dc61f68e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: node.free.usa.naiun.pw}}
+  - {name: 🇺🇸 美国-3.65MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.62MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-328.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-337.5KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 塞浦路斯-1.35MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
-      - 未知国家-3.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
+      - 塞浦路斯-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
-      - 未知国家-3.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
+      - 塞浦路斯-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
-      - 未知国家-3.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
+      - 塞浦路斯-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
-      - 未知国家-3.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
+      - 塞浦路斯-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
-      - 未知国家-3.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
+      - 塞浦路斯-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
-      - 未知国家-3.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
+      - 塞浦路斯-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
-      - 未知国家-3.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-328.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
+      - 塞浦路斯-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
