--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.18MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇸🇬 新加坡-464.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-1.73MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
   - {name: 🇫🇷 法国-2.46MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-337.5KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-641.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
   - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 00b3203c-0925-4bce-9fef-1a4794752a8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
   - {name: 未知国家-366.9KB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-641.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 未知国家-366.9KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-641.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 未知国家-366.9KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-641.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 未知国家-366.9KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-641.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 未知国家-366.9KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-641.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 未知国家-366.9KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-641.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 未知国家-366.9KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇩🇪 德国-337.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-641.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 未知国家-366.9KB/s(Youtube:不良林)
